# U-Mamba-Adjustment

./: .dockerignore  .gitignore  .venv-activate.sh  AWSInstanceData.md  CommandLineCalls.md  CustomizationLessons.md  Dockerfile  ENVIRONMENT-STATUS.md  TrainingConfigurationLog.md  UV-ENVIRONMENT-SETUP.md  aws-deployment-setup.md  docker-deployment.md  main.py  mamba3-install.md  mamba3_xlstm_research.md  pyproject.toml  spatiotemporal_mamba_research_context.md  sync_remote_models.sh
Wolfram/: ViewNifti.nb
scripts/: docker-build.sh  docker-entrypoint.sh  docker-push-ecr.sh  setup_aws.sh
umamba/: .gitignore  =1.2.0  setup.py
umamba/debugging/: debug_nnunetv2_train.py
umamba/nnunetv2/: paths.py
umamba/nnunetv2/BB-explore/: low_dose.py  prepare_data_for_nnunetv2.py  prepare_data_for_nnunetv2_3d.py
umamba/nnunetv2/experiment_planning/experiment_planners/: default_experiment_planner.py
umamba/nnunetv2/inference/: check_torch_dill.py  data_iterators.py  predict_from_raw_data.py  predict_from_raw_data_with_model_exports.py  predict_from_raw_data_with_model_exports.py.backup  predict_from_raw_data_with_onnx_export.py  sliding_window_prediction.py
umamba/nnunetv2/nets/: UMambaBot3Mamba3_2d.py  UMambaBot3_2d.py  UMambaBot_2d.py  UMambaBot_3d.py  UMambaEnc3_2d.py  UMambaEnc_2d.py  UMambaEnc_3d.py  UMambaTSBot3_3d.py  UMambaTSBot_3d.py  UMambaTSEnc3_3d.py  UMambaTSEnc_3d.py  UxLSTMBot_2d.py  UxLSTMBot_3d.py  UxLSTMEnc_2d.py  UxLSTMEnc_3d.py  vision_lstm.py
umamba/nnunetv2/training/loss/: compound_losses.py  robust_ce_loss.py
umamba/nnunetv2/training/loss_functions/: dice_loss.py
umamba/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py  nnUNetTrainerUMambaBot3.py  nnUNetTrainerUMambaBot3Mamba3_LowDoseContrastSim.py  nnUNetTrainerUMambaBot3_LowDoseContrastSim.py  nnUNetTrainerUMambaEnc3.py  nnUNetTrainerUMambaEnc3_LowDoseContrastSim.py  nnUNetTrainerUMambaTSBot.py  nnUNetTrainerUMambaTSBot3.py  nnUNetTrainerUMambaTSBot3MidLoss.py  nnUNetTrainerUMambaTSBot_LowDoseContrastSim.py  nnUNetTrainerUMambaTSEnc.py  nnUNetTrainerUMambaTSEnc3.py  nnUNetTrainerUMambaTSEnc_LowDoseContrastSim.py  nnUNetTrainerUNETR.py  nnUNetTrainerUxLSTMBot_LowDose.py  nnUNetTrainerV2_Loss_CE.py  nnUNetTrainerV2_Loss_Dice.py  nnUNetTrainerV2_Loss_DiceFocal.py  nnUNetTrainerV2_Loss_DiceTopK10.py  nnUNetTrainerV2_Loss_DiceTopK10Focal.py  nnUNetTrainer_Loss_CE.py  nnUNetTrainer_Loss_Dice.py  nnUNetTrainer_Loss_DiceFocal-orig.py  nnUNetTrainer_Loss_DiceFocal.py  nnUNetTrainer_Loss_DiceTopK10CE.py  nnUNetTrainer_Loss_TopK10.py  nnUNetTrainer_LowDoseContrastSim.py
umamba/nnunetv2/utilities/: CheckTorchscript.py  InferFromTorch.ipynb  OnnxToTorchscript.ipynb  OnnxToTorchscript.py  PyTorchToOnnx.py  PyTorchUNetFromPlansToOnnx.py  find_class_by_name.py  inspect_angiograms_with_model.py  report_dynamo_export.sarif
umamba/nnunetv2/utilities/label_handling/: label_handling.py
(+2 files in other folders)
