[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "u-mamba-adjustment"
version = "0.1.0"
description = "U-Mamba enhancement for biomedical image segmentation with nnUNet"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "U-Mamba Contributors"}]
license = {text = "Apache License 2.0"}

dependencies = [
    # PyTorch with CUDA 12.1 support (adjust index-url for CUDA 11.8: https://download.pytorch.org/whl/cu118)
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Core scientific and ML libraries
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scikit-image>=0.19.3",

    # Biomedical imaging
    "SimpleITK>=2.2.1",
    "nibabel>=4.0.0",
    "opencv-python>=4.13.0.92",
    "h5py>=3.16.0",

    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",

    # Utilities
    "dill>=0.4.1",
    "tqdm>=4.62.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "cmake>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
homepage = "https://github.com/bowang-lab/U-Mamba"
repository = "https://github.com/bowang-lab/U-Mamba"

[tool.uv]
# Use PyTorch from official index for CUDA support
# Change cu121 to cu118 if using CUDA 11.8 instead of 12.1
# Note: Using uv with PyPI packages and manual pip install for Mamba/nnUNet
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]

[tool.setuptools]
packages = ["umamba"]

[tool.pip]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
