[project]
name = "u-mamba-adjustment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmake>=4.2.3",
    "dill>=0.4.1",
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "opencv-python>=4.13.0.92",
    "simpleitk>=2.5.3",
    "torch>=2.10.0",
]

[project.optional-dependencies]
gpu = [
    "causal-conv1d==1.6.1",
    "mamba-ssm",
]

[tool.uv.sources]
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", rev = "316ed6036538405f767782132f76caf342256d33" }
